add dashboard page, add dashboard main page, fix bugs and styles and add ui components

--- a/src/assets/styles/inputs.scss
+++ b/src/assets/styles/inputs.scss
@@ -1,4 +1,4 @@
-tui-input, tui-input-password, tui-input-phone {
+tui-input, tui-input-password, tui-input-phone, tui-input-year {
   direction: rtl!important;
   text-align: right!important;
   border-radius: 8px!important;
