--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -19,6 +19,8 @@ $bright-turquoise-600: #00A393;
 $rose-base-500: #FF4ECD;
 $rose-600: #F012A7;
 
+$red-error-500: #FF4141;
+
 $blue-base-600: #0D9AFF;
 $blue-700: #0A82EB;
 
