--- a/src/features/clock-feature/clock-feature.component.html
+++ b/src/features/clock-feature/clock-feature.component.html
@@ -1,30 +1,30 @@
 <div class="clock-block white-text">
   <div class="clock-block__face bg-neutrals-950">
-    <h4 class="clock-block__face-time fit-content">00</h4>
-    <div class="clock-block__face-text caption-text-medium fit-content">Days</div>
+    <h4 class="clock-block__face-time w-fit-content">00</h4>
+    <div class="clock-block__face-text caption-text-medium w-fit-content">Days</div>
   </div>
   <div class="clock-block__divider">
     <div class="clock-block__divider-item rounded-full bg-neutrals-950"></div>
     <div class="clock-block__divider-item rounded-full bg-neutrals-950"></div>
   </div>
   <div class="clock-block__face bg-neutrals-950">
-    <h4 class="clock-block__face-time fit-content">15</h4>
-    <div class="clock-block__face-text caption-text-medium fit-content">Hours</div>
+    <h4 class="clock-block__face-time w-fit-content">15</h4>
+    <div class="clock-block__face-text caption-text-medium w-fit-content">Hours</div>
   </div>
   <div class="clock-block__divider">
     <div class="clock-block__divider-item rounded-full bg-neutrals-950"></div>
     <div class="clock-block__divider-item rounded-full bg-neutrals-950"></div>
   </div>
   <div class="clock-block__face bg-neutrals-950">
-    <h4 class="clock-block__face-time fit-content">35</h4>
-    <div class="clock-block__face-text caption-text-medium fit-content">Min</div>
+    <h4 class="clock-block__face-time w-fit-content">35</h4>
+    <div class="clock-block__face-text caption-text-medium w-fit-content">Min</div>
   </div>
   <div class="clock-block__divider">
     <div class="clock-block__divider-item rounded-full bg-neutrals-950"></div>
     <div class="clock-block__divider-item rounded-full bg-neutrals-950"></div>
   </div>
   <div class="clock-block__face bg-neutrals-950">
-    <h4 class="clock-block__face-time fit-content">48</h4>
-    <div class="clock-block__face-text caption-text-medium fit-content">Sec</div>
+    <h4 class="clock-block__face-time w-fit-content">48</h4>
+    <div class="clock-block__face-text caption-text-medium w-fit-content">Sec</div>
   </div>
 </div>
