--- a/src/features/login-form/login-form.component.html
+++ b/src/features/login-form/login-form.component.html
@@ -18,7 +18,7 @@
         [control]="loginForm.controls.password"
       ></smarti-input-password>
     </div>
-    <div class="mt-6 flex justify-between width-input-full-hd">
+    <div class="mt-6 flex justify-between w-input-full-hd">
       <div
         class="bright-turquoise-text-500 text-underline paragraph-text-medium cursor-pointer"
         (click)="navigateToRestorePassword()"
