--- a/src/features/registration-form/form-container/payment-method/pay-by-smarti/pay-by-smarti.component.html
+++ b/src/features/registration-form/form-container/payment-method/pay-by-smarti/pay-by-smarti.component.html
@@ -33,7 +33,7 @@
       [ngSwitch]="activeTabIndex"
     >
       <div *ngSwitchCase="paymentMethodTabs.Bank">
-        <div class="width-360"></div>
+        <div class="w-90"></div>
       </div>
       <div *ngSwitchCase="paymentMethodTabs.InstitutionalNumber">
         <smarti-input-field
