--- a/src/features/reset-password-form/reset-password-form.component.html
+++ b/src/features/reset-password-form/reset-password-form.component.html
@@ -1,4 +1,4 @@
-<div class="width-form-full-hd mt-2 bg-white rounded-l box-shadow-big">
+<div class="w-form-full-hd mt-2 bg-white rounded-l box-shadow-big">
   <smarti-form-container-reset-password
     (changingStep)="changingStep.next($event)"
   ></smarti-form-container-reset-password>
