--- a/src/pages/login/login.component.html
+++ b/src/pages/login/login.component.html
@@ -5,7 +5,7 @@
     [leftBlockClickedText]="'התחברות'"
     [redirectLink]="'/registration'"
   ></smarti-header-auth-layout>
-  <div class="width-full-hd margin-0-auto">
+  <div class="w-full-hd margin-0-auto">
     <div class="flex justify-between">
       <div class="seated-working-woman-img"></div>
       <h1 class="medium text-right self-center neutrals-text-950">
