--- a/src/pages/registration/registration.component.html
+++ b/src/pages/registration/registration.component.html
@@ -5,7 +5,7 @@
     [leftBlockClickedText]="'התחברות'"
     [redirectLink]="'/login'"
   ></smarti-header-auth-layout>
-  <div class="width-full-hd margin-0-auto">
+  <div class="w-full-hd margin-0-auto">
     <smarti-progress-bar [counter]="stepCounter"></smarti-progress-bar>
     <div class="flex justify-between mt-2">
       <div
