--- a/src/shared/dialog/leads-dialog/leads-dialog.component.html
+++ b/src/shared/dialog/leads-dialog/leads-dialog.component.html
@@ -9,11 +9,11 @@
 >
   <div class="flex flex-col leads-form-block-width bg-white mb-6 mt-8">
     <h3
-      class="medium mt-20 dir-rtl neutrals-text-950 mb-1 margin-rl-auto width-header-leads"
+      class="medium mt-20 dir-rtl neutrals-text-950 mb-1 margin-rl-auto w-header-leads"
       [innerHTML]="headerFormText"
     ></h3>
     <div
-      class="neutrals-text-950 mt-8 dir-rtl regular-text mb-1 margin-rl-auto width-header-leads"
+      class="neutrals-text-950 mt-8 dir-rtl regular-text mb-1 margin-rl-auto w-header-leads"
       [innerHTML]="descriptionFormText"
     ></div>
     <div class="mt-12 margin-rl-auto">
@@ -52,11 +52,11 @@
       [style.background]="'url(' + backgroundImage + ')'"
     ></div>
     <h1
-      class="medium neutrals-text-950 text-center mt-10 mb-8 width-input-full-hd margin-rl-auto"
+      class="medium neutrals-text-950 text-center mt-10 mb-8 w-input-full-hd margin-rl-auto"
       [innerHTML]="headerText"
     ></h1>
     <div
-      class="paragraph-text-medium neutrals-text-950 text-center width-input-full-hd margin-rl-auto"
+      class="paragraph-text-medium neutrals-text-950 text-center w-input-full-hd margin-rl-auto"
       [innerHTML]="descriptionText"
     ></div>
   </div>
