--- a/src/shared/layout/dashboard-layout/dashboard-header/dashboard-header.component.html
+++ b/src/shared/layout/dashboard-layout/dashboard-header/dashboard-header.component.html
@@ -2,7 +2,7 @@
   <div>
     <smarti-custom-user-accordion [username]="'הילוך שישי'"></smarti-custom-user-accordion>
   </div>
-  <div class="flex flex-row justify-between rounded-xls bg-neutrals-950 box-shadow-big w-full height-72">
+  <div class="flex flex-row justify-between rounded-xls bg-neutrals-950 box-shadow-big w-full h-18">
     <div class="group-block self-center box-shadow-regular m-2 bg-white">
       <smarti-custom-group-select></smarti-custom-group-select>
     </div>
