--- a/src/assets/styles/borders.scss
+++ b/src/assets/styles/borders.scss
@@ -8,6 +8,10 @@
   border: 1px solid $bright-turquoise-500;
 }
 
+.border-neutrals-50 {
+  border: 1px solid $neutrals-50;
+}
+
 .border-neutrals-100 {
   border: 1px solid $neutrals-100;
 }
