--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -30,10 +30,18 @@
   color: $pumpkin-base-400;
 }
 
+.pumpkin-text-500 {
+  color: $pumpkin-500;
+}
+
 .bright-turquoise-text-500 {
   color: $bright-turquoise-500;
 }
 
 .green-success-500-text {
   color: $green-success-500;
+}
+
+.red-error-500-text {
+  color: $red-error-500;
 }
