--- a/src/assets/styles/margins.scss
+++ b/src/assets/styles/margins.scss
@@ -191,6 +191,10 @@
   margin-left: auto;
 }
 
+.ml-2 {
+  margin-left: 8px;
+}
+
 .ml-4 {
   margin-left: 16px;
 }
@@ -209,6 +213,10 @@
 
 .ml-20 {
   margin-left: 80px;
+}
+
+.ml-150 {
+  margin-left: 150px;
 }
 
 /* margin-inline */
