--- a/src/assets/styles/paddings.scss
+++ b/src/assets/styles/paddings.scss
@@ -1,3 +1,7 @@
+.p-2 {
+  padding: 8px;
+}
+
 .p-6 {
   padding: 24px;
 }
@@ -7,7 +11,17 @@
   padding-bottom: 4px;
 }
 
+.py-2 {
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
 .px-2 {
   padding-right: 8px;
   padding-left: 8px;
+}
+
+.px-4 {
+  padding-right: 16px;
+  padding-left: 16px;
 }
