--- a/src/features/registration-form/registration-form.component.html
+++ b/src/features/registration-form/registration-form.component.html
@@ -1,3 +1,3 @@
-<div class="width-form-full-hd mt-2 bg-white rounded-l box-shadow-big">
+<div class="w-form-full-hd mt-2 bg-white rounded-l box-shadow-big">
   <smarti-form-container (changingStep)="changingStep.next($event)"></smarti-form-container>
 </div>
