--- a/src/pages/reset-password/reset-password.component.html
+++ b/src/pages/reset-password/reset-password.component.html
@@ -1,6 +1,6 @@
 <div class="bg-neutrals-20">
   <smarti-header-auth-layout [haveLeftBLock]="false"></smarti-header-auth-layout>
-  <div class="width-full-hd margin-0-auto">
+  <div class="w-full-hd margin-0-auto">
     <div class="flex justify-between">
       <div class="puzzle-with-people-img"></div>
       <h1 class="medium text-right self-center neutrals-text-950">סיסמא חדשה</h1>
