--- a/src/shared/layout/dashboard-layout/dashboard-main/dashboard-main.component.html
+++ b/src/shared/layout/dashboard-layout/dashboard-main/dashboard-main.component.html
@@ -1,54 +1,41 @@
 <div class="mt-4">
   <div class="flex flex-row justify-end gap-270px">
-    <div class="switcher-block flex flex-row bg-white rounded-xl">
-      <div class="switcher-block__item flex flex-row gap-2 bg-bright-turquoise-50 rounded-2ls justify-end items-center">
+    <div class="dashboard-switcher-block flex flex-row bg-white rounded-xl">
+      <div
+        class="dashboard-switcher-block__item flex flex-row gap-2 bg-bright-turquoise-50 rounded-2ls justify-end items-center"
+      >
         <div class="paragraph-text-extra neutrals-text-950">תאריכים</div>
-        <div class="switcher-block__item__circle rounded-full border-neutrals-100 bg-white mr-4"></div>
+        <div class="dashboard-switcher-block__item__circle rounded-full border-neutrals-100 bg-white mr-4"></div>
       </div>
-      <div class="switcher-block__item flex flex-row gap-2 bg-bright-turquoise-50 rounded-2ls justify-end items-center">
+      <div
+        class="dashboard-switcher-block__item flex flex-row gap-2 bg-bright-turquoise-50 rounded-2ls justify-end items-center"
+      >
         <div class="paragraph-text-extra neutrals-text-950">חודש שכר</div>
-        <div class="switcher-block__item__circle rounded-full border-neutrals-100 bg-white mr-4"></div>
+        <div class="dashboard-switcher-block__item__circle rounded-full border-neutrals-100 bg-white mr-4"></div>
       </div>
     </div>
-    <div class="">
-      <h3 class="neutrals-text-950 mt-0 mb-0">Good Morning</h3>
-      <h3 class="medium mt-2 neutrals-text-950 mt-0 mb-0">User Name</h3>
-      <h4 class="bg-white mt-8 mb-0 py-1 px-2 rounded-ls bright-turquoise-text-500 fit-content">Wed 24 Jun, 2023</h4>
+    <div>
+      <h3 class="neutrals-text-950 mt-0 mb-0 text-right">Good Morning</h3>
+      <h3 class="medium mt-2 neutrals-text-950 mt-0 mb-0 text-right">User Name</h3>
+      <h4 class="bg-white mt-8 mb-0 py-1 px-2 rounded-ls bright-turquoise-text-500 w-fit-content">Wed 24 Jun, 2023</h4>
     </div>
   </div>
   <div>
-    <div class="grid gap-6 info-block mt-7">
-      <div class="bg-neutrals-950 rounded-l">
-        <div class="info-block__image"></div>
-        <div class="info-block__text medium-text white-text text-right mt-4 mr-4 ml-auto">
-          Save your time and avoid mistakes ain handling multiple pension providers and employees in your organization
-        </div>
-        <div class="ml-4 mt-2 fit-content">
-          <smarti-button
-            [text]="'תהליך חדש'"
-            [customHeight]="'42px'"
-            [customButtonWidth]="'168px'"
-            [typeClass]="'confirm'"
-            [isNeedZIndex]="true"
-          ></smarti-button>
-        </div>
+    <smarti-last-payment></smarti-last-payment>
+    <div class="dashboard-info-grid grid mt-6 gap-6 bg-white">
+      <div class="dashboard-info-grid__main box-shadow-big rounded-l">
+        <smarti-inquiries></smarti-inquiries>
       </div>
-      <div class="bg-neutrals-950 rounded-l">
-        <div class="info-block__image"></div>
-        <h3 class="medium white-text text-right mt-4 mb-0 mr-6 ml-auto">תשלום אחרון</h3>
-        <div class="flex flex-row justify-end mt-5 mr-6 gap-8">
-          <div class="successful-icon"></div>
-          <div class="amount medium-text white-text dir-rtl">34.569,89</div>
-          <div class="date neutrals-text-100 regular-text dir-rtl">09-2022</div>
-          <div class="year pumpkin-text-400 regular-text dir-rtl">ספטמבר 2022</div>
-        </div>
-        <div class="flex flex-row justify-end mt-8 mr-6 gap-8">
-          <div class="successful-icon"></div>
-          <div class="amount medium-text white-text dir-rtl">32.227,54</div>
-          <div class="date neutrals-text-100 regular-text dir-rtl">09-2022</div>
-          <div class="year pumpkin-text-400 regular-text dir-rtl">ספטמבר 2022</div>
-        </div>
+      <div class="dashboard-info-grid__left box-shadow-big rounded-l">
+        <smarti-feeds></smarti-feeds>
+      </div>
+      <div class="dashboard-info-grid__right box-shadow-big rounded-l">
+        <smarti-balance-for-compensation></smarti-balance-for-compensation>
+      </div>
+      <div class="dashboard-info-grid__footer box-shadow-big rounded-l">
+        <smarti-dashboard-home-small-table></smarti-dashboard-home-small-table>
       </div>
     </div>
+    <smarti-dashboard-home-table></smarti-dashboard-home-table>
   </div>
 </div>
