--- a/src/shared/ui/custom-group-select/custom-group-select.component.html
+++ b/src/shared/ui/custom-group-select/custom-group-select.component.html
@@ -6,7 +6,7 @@
   >
     <div>
       <tui-multi-select
-        [formControlName]="groupSelectedForm.controls.department.value"
+        formControlName="department"
         class="tui-group__inherit-item multiselect dir-rtl"
         [tuiTextfieldLabelOutside]="true"
         [editable]="false"
@@ -22,7 +22,7 @@
     </div>
     <div>
       <tui-multi-select
-        [formControlName]="groupSelectedForm.controls.employer.value"
+        formControlName="employer"
         class="tui-group__inherit-item multiselect dir-rtl"
         [tuiTextfieldLabelOutside]="true"
         [editable]="false"
@@ -38,7 +38,7 @@
     </div>
     <div>
       <tui-multi-select
-        [formControlName]="groupSelectedForm.controls.organization.value"
+        formControlName="organization"
         class="tui-group__inherit-item multiselect dir-rtl"
         [tuiTextfieldLabelOutside]="true"
         [editable]="false"
