--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,9 @@
 @import "flex";
 @import "grid";
 @import "bg-colors";
+@import "heights";
+@import "widths";
+@import "blocks";
 @import "colors";
 @import "margins";
 @import "paddings";
@@ -30,6 +33,10 @@ body {
   cursor: pointer;
 }
 
+.block {
+  display: block;
+}
+
 .inline-block {
   display: inline-block;
 }
@@ -54,52 +61,8 @@ body {
   position: relative;
 }
 
-.block {
-  display: block;
-}
-
-.fit-content {
-  width: fit-content;
-}
-
 .dir-rtl {
   direction: rtl;
-}
-
-.height-full {
-  height: 100%;
-}
-
-.height-72 {
-  height: 72px;
-}
-
-.width-360 {
-  width: 360px;
-}
-
-.w-full {
-  width: 100%;
-}
-
-.w-inherit {
-  width: inherit;
-}
-
-.width-full-hd {
-  width: 1080px;
-}
-
-.width-form-full-hd {
-  width: 1088px;
-}
-
-.width-input-full-hd {
-  width: 536px;
-}
-
-.width-header-leads {
-  width: 398px;
 }
 
 .z-10 {
