--- a/src/pages/dashboard/dashboard.component.html
+++ b/src/pages/dashboard/dashboard.component.html
@@ -1,10 +1,6 @@
 <smarti-dashboard-header></smarti-dashboard-header>
-<div class="white-background-absolute-block"></div>
-<div class="flex flex-row justify-between gap-12">
-  <smarti-dashboard-notification></smarti-dashboard-notification>
-  <div class="w-full">
-    <smarti-dashboard-main></smarti-dashboard-main>
-  </div>
+<div class="flex flex-row justify-end gap-15">
+  <router-outlet></router-outlet>
   <div>
     <smarti-dashboard-menu></smarti-dashboard-menu>
   </div>
