--- a/src/shared/layout/dashboard-layout/dashboard-home/dashboard-home.component.scss
+++ b/src/shared/layout/dashboard-layout/dashboard-home/dashboard-home.component.scss
@@ -44,3 +44,12 @@
     height: 280px;
   }
 }
+.white-background-absolute-block {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -10;
+  height: 1080px;
+  width: 316px;
+  background: white;
+}
