add dashboard - balance, cash-request, documents, processes. fix buttons input-file, input-search

--- a/src/assets/styles/blocks.scss
+++ b/src/assets/styles/blocks.scss
@@ -38,9 +38,19 @@
   height: 108px;
 }
 
+.block-w322-h178 {
+  width: 322px;
+  height: 178px;
+}
+
 .block-w608-h178 {
   width: 608px;
   height: 172px;
+}
+
+.block-w608-h322 {
+  width: 608px;
+  height: 322px;
 }
 
 .block-w812-h96 {
