--- a/src/shared/ui/button/button.component.html
+++ b/src/shared/ui/button/button.component.html
@@ -31,5 +31,9 @@
       *ngIf="hasEditIcon"
       class="edit-icon"
     ></div>
+    <div
+      *ngIf="hasAddIcon"
+      class="add-square-icon"
+    ></div>
   </button>
 </div>
