--- a/src/assets/styles/inputs.scss
+++ b/src/assets/styles/inputs.scss
@@ -92,3 +92,19 @@ tui-input-date {
     top: 10px!important;
   }
 }
+
+tui-input-inline {
+  color: $neutrals-500!important;
+  text-align: right!important;
+  font-family: RubikMedium, sans-serif !important;
+  font-size: 16px!important;
+  font-style: normal!important;
+  font-weight: 400!important;
+  line-height: 24px!important;
+
+  .t-placeholder {
+    display: flex !important;
+    justify-content: space-between !important;
+    color: $neutrals-300;
+  }
+}
