--- a/src/shared/layout/dashboard-layout/dashboard-processes/dashboard-processes.component.html
+++ b/src/shared/layout/dashboard-layout/dashboard-processes/dashboard-processes.component.html
@@ -23,11 +23,23 @@
       ></smarti-button>
     </div>
     <div class="flex flex-row self-end gap-6">
-      <smarti-custom-dropdown [customContent]="customDropdownContent">
-        <div class="block-w172-h42 flex flex-row justify-center items-center gap-3 cursor-pointer">
+      <smarti-custom-dropdown
+        [customContent]="customDropdownContent"
+        (clickEvent)="onCustomDropdownClick()"
+      >
+        <div
+          *ngIf="!isCustomDropdownActive; else activeDropdownButtonTemplate"
+          class="block-w172-h42 flex flex-row justify-center items-center gap-3 cursor-pointer"
+        >
           <div class="green-left-arrow-icon"></div>
           <div class="paragraph-text-extra bright-turquoise-text-500">תהליך חדש</div>
         </div>
+        <ng-template #activeDropdownButtonTemplate>
+          <div class="block-w172-h42 flex flex-row justify-center items-center gap-3 cursor-pointer">
+            <div class="green-right-arrow-icon"></div>
+            <div class="paragraph-text-extra bright-turquoise-text-500">נקה</div>
+          </div>
+        </ng-template>
       </smarti-custom-dropdown>
       <div class="self-end">
         <smarti-input-search
