--- a/src/shared/layout/dashboard-layout/dashboard-processes/dashboard-processes.component.scss
+++ b/src/shared/layout/dashboard-layout/dashboard-processes/dashboard-processes.component.scss
@@ -3,3 +3,9 @@
   width: 16px;
   height: 16px;
 }
+
+.green-right-arrow-icon {
+  background: url("/assets/svg/arrow-right-right-icon-green-16.svg");
+  width: 16px;
+  height: 16px;
+}
