--- a/src/shared/ui/button/button.component.scss
+++ b/src/shared/ui/button/button.component.scss
@@ -19,3 +19,10 @@
   height: 20px;
   margin-left: 8px;
 }
+
+.add-square-icon {
+  background: url("/assets/svg/add-square-icon-20.svg");
+  width: 20px;
+  height: 20px;
+  margin-left: 8px;
+}
