--- a/src/shared/ui/input-search/input-search.component.html
+++ b/src/shared/ui/input-search/input-search.component.html
@@ -1,11 +1,11 @@
 <tui-input-inline
-  class="input-search"
   tuiTextfieldSize="m"
   [tuiTextfieldIcon]="tuiIconSearchLarge"
   [style.height]="'28px'"
   [style.width]="customWidth"
   [style.border-bottom]="customBorderBottom"
   [tuiTextfieldLabelOutside]="true"
+  [dir]="'rtl'"
   [(ngModel)]="search"
 >
   {{ placeholder }}
