--- a/src/assets/styles/flex.scss
+++ b/src/assets/styles/flex.scss
@@ -52,6 +52,10 @@
   gap: 8px;
 }
 
+.gap-2-5 {
+  gap: 10px;
+}
+
 .gap-3 {
   gap: 12px;
 }
@@ -111,6 +115,10 @@
 
 .gap-171px {
   gap: 171px;
+}
+
+.gap-182px {
+  gap: 182px;
 }
 
 .gap-217px {
