--- a/src/assets/styles/heights.scss
+++ b/src/assets/styles/heights.scss
@@ -10,12 +10,24 @@
   height: 40px;
 }
 
+.h-12 {
+  height: 48px;
+}
+
+.h-14 {
+  height: 56px;
+}
+
 .h-18 {
   height: 72px;
 }
 
 .h-20 {
   height: 80px;
+}
+
+.h-28 {
+  height: 112px;
 }
 
 .h-37 {
@@ -30,12 +42,20 @@
   height: 472px;
 }
 
+.h-550 {
+  height: 550px;
+}
+
 .min-h-608 {
   min-height: 608px;
 }
 
 .h-672 {
   height: 672px;
+}
+
+.h-744 {
+  height: 744px;
 }
 
 .h-752 {
