--- a/src/assets/styles/margins.scss
+++ b/src/assets/styles/margins.scss
@@ -2,6 +2,10 @@
   margin: 8px;
 }
 
+.m-5 {
+  margin: 20px;
+}
+
 .m-6 {
   margin: 24px;
 }
@@ -201,6 +205,10 @@
   margin-right: 16px;
 }
 
+.mr-5 {
+  margin-right: 20px;
+}
+
 .mr-6 {
   margin-right: 24px;
 }
@@ -242,6 +250,10 @@
   margin-left: 8px;
 }
 
+.ml-3-5 {
+  margin-left: 14px;
+}
+
 .ml-4 {
   margin-left: 16px;
 }
@@ -260,6 +272,10 @@
 
 .ml-7-5 {
   margin-left: 30px;
+}
+
+.ml-8 {
+  margin-left: 36px;
 }
 
 .ml-10 {
