--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -21,14 +21,18 @@ $rose-600: #F012A7;
 
 $red-error-500: #FF4141;
 
+$blue-base-50: #EDFBFF;
 $blue-base-600: #0D9AFF;
 $blue-700: #0A82EB;
 
 $pumpkin-base-400: #FB8A3C;
 $pumpkin-500: #F97316;
 
+$yellow-warning-400: #FFCF22;
+
 $green: #24ED33;
 $green-success-50: #F3FCF1;
+$green-success-100: #E1FBDD;
 $green-success-500: #3EC92C;
 
 :root {
