--- a/src/shared/ui/button/button.component.html
+++ b/src/shared/ui/button/button.component.html
@@ -35,5 +35,9 @@
       *ngIf="hasAddIcon"
       class="add-square-icon"
     ></div>
+    <div
+      *ngIf="hasMessageIcon"
+      class="message-notify-icon"
+    ></div>
   </button>
 </div>
