--- a/src/assets/styles/blocks.scss
+++ b/src/assets/styles/blocks.scss
@@ -8,9 +8,24 @@
   height: 28px;
 }
 
+.block-w86-h40 {
+  width: 86px;
+  height: 40px;
+}
+
+.block-w92-h32 {
+  width: 92px;
+  height: 32px;
+}
+
 .block-w100-h32 {
   width: 101px;
   height: 32px;
+}
+
+.block-w112-h40 {
+  width: 112px;
+  height: 40px;
 }
 
 .block-w172-h42 {
@@ -43,6 +58,11 @@
   height: 178px;
 }
 
+.block-w576-h112 {
+  width: 576px;
+  height: 112px;
+}
+
 .block-w608-h178 {
   width: 608px;
   height: 172px;
@@ -51,6 +71,11 @@
 .block-w608-h322 {
   width: 608px;
   height: 322px;
+}
+
+.block-w632-h744 {
+  min-width: 632px;
+  height: 744px;
 }
 
 .block-w812-h96 {
