--- a/src/shared/ui/button/button.component.scss
+++ b/src/shared/ui/button/button.component.scss
@@ -26,3 +26,11 @@
   height: 20px;
   margin-left: 8px;
 }
+
+
+.message-notify-icon {
+  background: url("/assets/svg/message-notify-icon-20.svg");
+  width: 20px;
+  height: 20px;
+  margin-left: 8px;
+}
